deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-management-service
  labels:
    app: issue-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-management-service
  template:
    metadata:
      labels:
        app: issue-management-service
    spec:
      containers:
        - name: issue-management-service
          image: gcr.io/PROJECT_ID/IMAGE:TAG  # Replace with your Docker Hub image and tag
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "80Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
