service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issue-management-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9091
  selector:
    app: issue-management-app  # Label selector for your service
