service.yml
apiVersion: v1
kind: Service
metadata:
  name: issue-management-service
spec:
  selector:
    app: issue-management-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
