ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developer-iq-tracker
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/issue-management-service
            pathType: Prefix
            backend:
              service:
                name: issue-management-service
                port:
                  number: 80
